--- a/LFMCompilerLLVMUpdated/code_examples/euclid.lfm
+++ b/LFMCompilerLLVMUpdated/code_examples/euclid.lfm
@@ -1,3 +1,4 @@
+// This is an .lfm file for the euclid's algorithm
 function euclid(x y)
    if y==0 : x;
       true : let z = x%y in
@@ -5,6 +6,6 @@ function euclid(x y)
              end
    end
 end
-function main()
+function main() /* This is a function */
    euclid(20,45)
 end
